$Rev$
[2008/06/02]
mEncoding.py EncodingDialog.py
                    Migirate EncodingDialog from xrc to meide
LexerBase.py mLexerBase.py LexerClass.py
                    Add default color theme support, you can set it in Preference
                    
[2008/05/14]
mPythonProject.py   Add Create Python Package in context menu of Directory Browser Window

[2008/05/12]
RegexWindow.py      Improve regex window, and when you set Unicode flag, it'll 
                    automatically convert \uXXXX to unichr
[2008/05/05]
mEditorCtrl.py      Fix Cancel Save file will prompt save as dialog again bug

[2008/05/01]
mFormat.py          Fix strip tailing spaces bug

-------------------------------------- 4.0 -----------------------------
[2008/04/24]
Fix                 Cann't to Can't

[2008/04/19]
mInputAssistant.py  Add config menu, and add toggle input assistant menu item
DirBrowser.py       Fix refresh directory bug

[2008/04/18]
mWrapText.py wraptext.py
                    Add wrap text feature

[2008/04/15]
doc                 Modify the documents
mEditorCtrl.py      Add copy filename to clipboard menu on document area tab context menu

[2008/04/14]
mEditorCtrl.py mDirBrowser.py DireBrowser.py
                    Add Open Explorer Window Here menu to editoctrl tab
                    Move Close Other to Close menu group in notebook context menu
                    Add tool button snippet and modify open dirbrowser and snippet as check toolbutton
                    Change `explorer.exe %s` as `explorer.exe /e, %s`
ruler/__init__.py   Fix ruler bug
DirBrowser.py       When add path, it'll automatically pop up project setting dialog

[2008/04/12]
mLexer.py mLexerClass1.py
                    Add slice syntax support
mCheckUpdate.py     Add auto check update

[2008/04/10]
mCommands.py mConcurrent.py
                    Improve caret display(process KILL_FOCUS event if in command mode or concurrent mode)

[2008/04/09]